--- a/bakalarka-frontend/package.json
+++ b/bakalarka-frontend/package.json
@@ -23,10 +23,13 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@google/maps": "^0.5.5",
     "@types/googlemaps": "^3.30.16",
     "bootstrap": "^4.1.3",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
+    "crypto": "^1.0.1",
+    "https": "^1.0.0",
     "rxjs": "^6.0.0",
     "xlsx": "^0.14.1",
     "zone.js": "~0.8.26"
