--- a/bakalarka-frontend/src/tsconfig.app.json
+++ b/bakalarka-frontend/src/tsconfig.app.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "types": [
-      "google"
+      "google",
+      "googlemaps"
     ]
   },
   "exclude": [
