--- a/bakalarka-backend/package.json
+++ b/bakalarka-backend/package.json
@@ -29,7 +29,9 @@
     "@adonisjs/shield": "^1.0.6",
     "exceljs": "^1.6.2",
     "fs": "0.0.1-security",
+    "ldapjs": "^1.0.2",
     "pem": "^1.13.2",
+    "pg": "^7.8.0",
     "xlsx": "^0.14.0"
   },
   "devDependencies": {},
