--- a/bakalarka-backend/package.json
+++ b/bakalarka-backend/package.json
@@ -33,6 +33,7 @@
     "ldapjs": "^1.0.2",
     "pem": "^1.13.2",
     "pg": "^7.8.0",
+    "sqlite3": "^4.0.6",
     "xlsx": "^0.14.0"
   },
   "devDependencies": {},
