--- a/bakalarka-frontend/package.json
+++ b/bakalarka-frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve -o",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -30,6 +30,8 @@
     "core-js": "^2.5.4",
     "crypto": "^1.0.1",
     "https": "^1.0.0",
+    "jquery": "^3.3.1",
+    "js": "^0.1.0",
     "rxjs": "^6.0.0",
     "xlsx": "^0.14.1",
     "zone.js": "~0.8.26"
