--- a/bakalarka-frontend/package.json
+++ b/bakalarka-frontend/package.json
@@ -32,6 +32,7 @@
     "https": "^1.0.0",
     "jquery": "^3.3.1",
     "js": "^0.1.0",
+    "npm": "^6.9.0",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
     "xlsx": "^0.14.1",
