--- a/bakalarka-backend/package.json
+++ b/bakalarka-backend/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "test": "node ace test"
+    "test": "node ace test",
+    "refresh": "browser-refresh server.js"
   },
   "keywords": [
     "adonisjs",
@@ -25,11 +26,12 @@
     "@adonisjs/framework": "^5.0.7",
     "@adonisjs/ignitor": "^2.0.6",
     "@adonisjs/lucid": "^5.0.4",
-    "@adonisjs/redis": "^2.0.7",
     "@adonisjs/session": "^1.0.25",
     "@adonisjs/shield": "^1.0.6",
+    "browser-refresh": "^1.7.3",
     "fs": "0.0.1-security",
     "ldapjs": "^1.0.2",
+    "npm": "^6.9.0",
     "pem": "^1.13.2",
     "pg": "^7.8.0",
     "sqlite3": "^4.0.6",
