dorobený prístup, spraáa účtov,  pridany guard, environments, model, upravena tabuľka admins

--- a/bakalarka-frontend/angular.json
+++ b/bakalarka-frontend/angular.json
@@ -54,7 +54,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "bachelor:build"
+            "browserTarget": "bachelor:build",
           },
           "configurations": {
             "production": {
