--- a/bakalarka-frontend/package.json
+++ b/bakalarka-frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "cypress:open": "$(npm bin)/cypress open",
     "start": "ng serve -o",
     "build": "ng build",
     "test": "ng test",
@@ -48,6 +49,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
+    "cypress": "^3.4.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
