--- a/bakalarka-backend/package.json
+++ b/bakalarka-backend/package.json
@@ -34,6 +34,7 @@
     "npm": "^6.9.0",
     "pem": "^1.13.2",
     "pg": "^7.8.0",
+    "python-shell": "^1.0.8",
     "sqlite3": "^4.0.6",
     "xlsx": "^0.14.0"
   },
