--- a/bakalarka-backend/package.json
+++ b/bakalarka-backend/package.json
@@ -35,6 +35,7 @@
     "pem": "^1.13.2",
     "pg": "^7.8.0",
     "python-shell": "^1.0.8",
+    "request": "^2.88.0",
     "sqlite3": "^4.0.6",
     "xlsx": "^0.14.0"
   },
