--- a/bakalarka-frontend/tsconfig.json
+++ b/bakalarka-frontend/tsconfig.json
@@ -2,6 +2,9 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
+    "paths": {
+      "jszip": [ "../node_modules/jszip/dist/jszip.min.js" ],
+    },
     "importHelpers": true,
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
