--- a/bakalarka-frontend/package.json
+++ b/bakalarka-frontend/package.json
@@ -12,62 +12,59 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.5",
-    "@angular/animations": "^8.0.0",
+    "@agm/core": "^1.1.0",
+    "@angular/animations": "^8.2.14",
     "@angular/cdk": "^6.4.7",
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/forms": "^8.0.0",
-    "@angular/http": "^7.2.7",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/http": "^7.2.16",
     "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
-    "@angular/platform-server": "^8.0.0",
-    "@angular/router": "^8.0.0",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/platform-server": "^8.2.14",
+    "@angular/router": "^8.2.14",
     "@google/maps": "^0.5.5",
-    "@types/googlemaps": "^3.30.16",
-    "bootstrap": "^4.4.1",
-    "chart.js": "^2.7.3",
-    "core-js": "^2.5.4",
+    "@types/googlemaps": "^3.39.6",
+    "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.3",
+    "core-js": "^2.6.11",
     "crypto": "^1.0.1",
     "file-saver": "^2.0.2",
     "https": "^1.0.0",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "js": "^0.1.0",
-
-    "jszip": "^3.2.2",
-   
-    "npm": "^6.13.1",
-
-    "rxjs": "^6.4.0",
+    "jszip": "^3.4.0",
+    "npm": "^6.14.5",
+    "rxjs": "^6.5.5",
     "stream": "0.0.2",
-    "tslib": "^1.10.0",
-    "xlsx": "^0.14.1",
+    "tslib": "^1.13.0",
+    "xlsx": "^0.14.5",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.800.1",
-    "@angular/cli": "^8.0.1",
-    "@angular/compiler-cli": "^8.0.0",
-    "@angular/language-service": "^7.2.7",
+    "@angular-devkit/build-angular": "^0.800.6",
+    "@angular/cli": "^8.3.26",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^7.2.16",
     "@types/file-saver": "^2.0.1",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/jszip": "^3.1.7",
+    "@types/jasmine": "^2.8.16",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/jszip": "^3.4.1",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
-    "cypress": "^3.7.0",
+    "cypress": "^3.8.3",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "^3.4.5"
+    "typescript": "^3.9.5"
   }
 }
