--- a/bakalarka-frontend/package.json
+++ b/bakalarka-frontend/package.json
@@ -13,23 +13,23 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.1.0",
-    "@angular/animations": "^8.2.14",
-    "@angular/cdk": "^6.4.7",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
+    "@angular/animations": "^9.1.9",
+    "@angular/cdk": "^9.2.4",
+    "@angular/common": "^9.1.9",
+    "@angular/compiler": "^9.1.9",
+    "@angular/core": "^9.1.9",
+    "@angular/forms": "^9.1.9",
     "@angular/http": "^7.2.16",
-    "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/platform-server": "^8.2.14",
-    "@angular/router": "^8.2.14",
-    "@google/maps": "^0.5.5",
+    "@angular/material": "^9.2.4",
+    "@angular/platform-browser": "^9.1.9",
+    "@angular/platform-browser-dynamic": "^9.1.9",
+    "@angular/platform-server": "^9.1.9",
+    "@angular/router": "^9.1.9",
+    "@google/maps": "^1.1.3",
     "@types/googlemaps": "^3.39.6",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
-    "core-js": "^2.6.11",
+    "core-js": "^3.6.5",
     "crypto": "^1.0.1",
     "file-saver": "^2.0.2",
     "https": "^1.0.0",
@@ -39,32 +39,32 @@
     "npm": "^6.14.5",
     "rxjs": "^6.5.5",
     "stream": "0.0.2",
-    "tslib": "^1.13.0",
-    "xlsx": "^0.14.5",
-    "zone.js": "~0.8.29"
+    "tslib": "^1.10.0",
+    "xlsx": "^0.16.2",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.800.6",
-    "@angular/cli": "^8.3.26",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^7.2.16",
+    "@angular-devkit/build-angular": "~0.901.7",
+    "@angular/cli": "^9.1.7",
+    "@angular/compiler-cli": "^9.1.9",
+    "@angular/language-service": "^9.1.9",
     "@types/file-saver": "^2.0.1",
-    "@types/jasmine": "^2.8.16",
+    "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
     "@types/jszip": "^3.4.1",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
-    "cypress": "^3.8.3",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.6",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.3.0",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "^3.9.5"
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
+    "cypress": "^4.7.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.2",
+    "karma": "~5.0.9",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "~3.3.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.10.2",
+    "tslint": "~6.1.2",
+    "typescript": "^3.8.3"
   }
 }
